# mediapipe_cmake

./: CMakeLists.txt  README.md
face_detector/: CMakeLists.txt
face_landmarker/: CMakeLists.txt
hair_segmenter/: CMakeLists.txt
hand_detector/: CMakeLists.txt
hand_detector/src/: hand_detector.cpp
hand_landmarker/: CMakeLists.txt
hand_landmarker/include/: hand_landmark.h
hand_landmarker/src/: hand_landmark.cpp  hand_landmark_impl.cpp  hand_landmark_impl.h
holistic_tracker/: CMakeLists.txt
interactive_segmenter/: CMakeLists.txt
iris_tracker/: CMakeLists.txt
pose_detector/: CMakeLists.txt
pose_landmarker/: CMakeLists.txt
selfie_segmenter/: CMakeLists.txt
